--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -106,40 +106,12 @@ check result lm3:
      start_in: 400 minutes 
   artifacts: 
     paths: 
-      - Node_CHAT2_report.xml
-      - Node_LGF2_report.xml
-      - Node_HEJ2_report.xml
-      - Node_HEJ4_report.xml
-      - Node_HEJ6_report.xml
-      - Node_HEJ8_report.xml
-      - Node_HEJ10_report.xml
-      - Node_HEJ0_report.xml
-      - Cell_CHAT2_report.xml
-      - Cell_LGF2_report.xml
-      - Cell_HEJ2_report.xml
-      - Cell_HEJ4_report.xml
-      - Cell_HEJ6_report.xml
-      - Cell_HEJ8_report.xml
-      - Cell_HEJ10_report.xml
-      - Cell_HEJ0_report.xml
+      - report_test_a2a.xml
+      - report_test_nb.xml
     reports:
         junit: 
-          - Node_CHAT2_report.xml
-          - Node_LGF2_report.xml
-          - Node_HEJ2_report.xml
-          - Node_HEJ4_report.xml
-          - Node_HEJ6_report.xml
-          - Node_HEJ8_report.xml
-          - Node_HEJ10_report.xml
-          - Node_HEJ0_report.xml
-          - Cell_CHAT2_report.xml
-          - Cell_LGF2_report.xml
-          - Cell_HEJ2_report.xml
-          - Cell_HEJ4_report.xml
-          - Cell_HEJ6_report.xml
-          - Cell_HEJ8_report.xml
-          - Cell_HEJ10_report.xml
-          - Cell_HEJ0_report.xml
+          - report_test_a2a.xml
+          - report_test_nb.xml
     when: always
   needs: [run lm3]
   dependencies:
@@ -148,13 +120,13 @@ check result lm3:
     - echo -e "\e[0Ksection_start:`date +%s`:my_first_section[collapsed=true]\r\e[0KWaiting for job completion"
     - while [[ $(ssh lm3 "squeue -u vortexbot | grep vortex") ]]; do echo "Waiting for job completion:"; echo "$(ssh lm3 squeue -u vortexbot )"; sleep 2m; done
     - echo -e "\e[0Ksection_end:`date +%s`:my_first_section\r\e[0K"
-    - if [[ ! $(ssh lm3 "grep 'Tests are over ' ${PATH2RUN}/Node_*") ]]; then echo "At least one of the node test did not execute till the end."; exit 1; fi
-    - if [[ ! $(ssh lm3 "grep 'Tests are over ' ${PATH2RUN}/Cell_*") ]]; then echo "At least one of the cell test did not execute till the end."; exit 1; fi
+    - if [[ ! $(ssh lm3 "grep 'Tests are over ' ${PATH2RUN}/std_out_a2a_*") ]]; then echo "At least one of the a2a test did not execute till the end."; exit 1; fi
+    - if [[ ! $(ssh lm3 "grep 'Tests are over ' ${PATH2RUN}/std_out_nb_*") ]]; then echo "At least one of the  nb test did not execute till the end."; exit 1; fi
     - scp lm3:${PATH2RUN}/*.xml .
-    - if [[ $(grep "<failure" Node_*.xml) ]]; then echo "At least one of the node tests has failed "; exit 1; fi 
-    # - test -f node_loworder_report.xml && if [[ $(grep "<failure" node_loworder_report.xml) ]]; then echo "At least one of the node tests has failed "; exit 1; fi 
-    # - test -f cell_highorder_report.xml && if [[ $(grep "<failure" cell_highorder_report.xml) ]]; then echo "At least one of the cell tests has failed "; exit 1; fi
-    - if [[ $(grep "<failure" Cell_*.xml) ]]; then echo "At least one of the cell tests has failed "; exit 1; fi
+    - test -f report_test_a2a.xml && if [[ $(grep "<failure" report_test_a2a.xml) ]]; then echo "At least one of the a2a tests has failed "; exit 1; fi 
+    - test -f report_test_nb.xml && if [[ $(grep "<failure" report_test_nb.xml) ]]; then echo "At least one of the nb tests has failed "; exit 1; fi
+    # - if [[ $(grep "<failure" Node_*.xml) ]]; then echo "At least one of the node tests has failed "; exit 1; fi 
+    # - if [[ $(grep "<failure" Cell_*.xml) ]]; then echo "At least one of the cell tests has failed "; exit 1; fi
     # - test -f cell_report.xml && grep -L "<failure" cell_report.xml   
   retry:                              # Retry -- Relaunch the Job
     max: 2                            # Limited to 2 (because of gitlab)
